# x/reporter/types/oracle_reporter.pb.go
@@ -11,15 +11,19 @@ import (
 	types "github.com/cosmos/cosmos-sdk/x/staking/types"
 	_ "github.com/cosmos/gogoproto/gogoproto"
 	proto "github.com/cosmos/gogoproto/proto"
+	github_com_cosmos_gogoproto_types "github.com/cosmos/gogoproto/types"
+	_ "google.golang.org/protobuf/types/known/timestamppb"
 	io "io"
 	math "math"
 	math_bits "math/bits"
+	time "time"
 )
 
 // Reference imports to suppress errors if they are not otherwise used.
 var _ = proto.Marshal
 var _ = fmt.Errorf
 var _ = math.Inf
+var _ = time.Kitchen
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the proto package it is being compiled against.
@@ -35,6 +39,10 @@ type OracleReporter struct {
 	TotalTokens cosmossdk_io_math.Int `protobuf:"bytes,2,opt,name=total_tokens,json=totalTokens,proto3,customtype=cosmossdk.io/math.Int" json:"total_tokens"`
 	// commission for the reporter
 	Commission *types.Commission `protobuf:"bytes,3,opt,name=commission,proto3" json:"commission,omitempty"`
+	// jailed is a bool weather the reporter is jailed or not
+	Jailed bool `protobuf:"varint,4,opt,name=jailed,proto3" json:"jailed,omitempty"`
+	// jailed_until is the time the reporter is jailed until
+	JailedUntil time.Time `protobuf:"bytes,5,opt,name=jailed_until,json=jailedUntil,proto3,stdtime" json:"jailed_until"`
 }
 
 func (m *OracleReporter) Reset()         { *m = OracleReporter{} }
@@ -84,6 +92,20 @@ func (m *OracleReporter) GetCommission() *types.Commission {
 	return nil
 }
 
+func (m *OracleReporter) GetJailed() bool {
+	if m != nil {
+		return m.Jailed
+	}
+	return false
+}
+
+func (m *OracleReporter) GetJailedUntil() time.Time {
+	if m != nil {
+		return m.JailedUntil
+	}
+	return time.Time{}
+}
+
 func init() {
 	proto.RegisterType((*OracleReporter)(nil), "layer.reporter.OracleReporter")
 }
@@ -93,27 +115,32 @@ func init() {
 }
 
 var fileDescriptor_28310cb3dcf79802 = []byte{
-	// 313 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x4c, 0x91, 0xc1, 0x4a, 0x03, 0x31,
-	0x10, 0x86, 0x37, 0x0a, 0xa2, 0xa9, 0x14, 0x5c, 0x14, 0x6a, 0x0f, 0xdb, 0x52, 0x7a, 0x28, 0x94,
-	0x26, 0x54, 0xdf, 0xa0, 0xe2, 0xa1, 0x17, 0x85, 0xc5, 0x93, 0x97, 0x92, 0xae, 0x61, 0x1b, 0xba,
-	0xbb, 0x53, 0x92, 0x51, 0xec, 0x5b, 0xf8, 0x30, 0x3e, 0x80, 0xc7, 0x1e, 0x8b, 0x27, 0xf1, 0x50,
-	0xa4, 0xfb, 0x22, 0xd2, 0x24, 0x5b, 0xbd, 0x84, 0xfc, 0x33, 0xdf, 0x64, 0xfe, 0xc9, 0xd0, 0x6e,
-	0x26, 0x96, 0x52, 0x73, 0x2d, 0x17, 0xa0, 0x51, 0x6a, 0x0e, 0x5a, 0x24, 0x99, 0x9c, 0x54, 0x9a,
-	0x2d, 0x34, 0x20, 0x84, 0x75, 0x4b, 0xb1, 0x2a, 0xda, 0x3c, 0x13, 0xb9, 0x2a, 0x80, 0xdb, 0xd3,
-	0x21, 0xcd, 0x6e, 0x02, 0x26, 0x07, 0xc3, 0x0d, 0x8a, 0xb9, 0x2a, 0x52, 0xfe, 0x32, 0x9c, 0x4a,
-	0x14, 0xc3, 0x4a, 0x7b, 0xea, 0xd2, 0x51, 0x13, 0xab, 0xb8, 0x13, 0x3e, 0x75, 0x9e, 0x42, 0x0a,
-	0x2e, 0xbe, 0xbb, 0xb9, 0x68, 0xe7, 0x83, 0xd0, 0xfa, 0xbd, 0xf5, 0x14, 0xfb, 0xe6, 0x61, 0x93,
-	0x1e, 0x57, 0x46, 0x1a, 0xa4, 0x4d, 0x7a, 0x27, 0xf1, 0x5e, 0x87, 0x77, 0xf4, 0x14, 0x01, 0x45,
-	0x36, 0x41, 0x98, 0xcb, 0xc2, 0x34, 0x0e, 0x76, 0xf9, 0x51, 0x7f, 0xb5, 0x69, 0x05, 0xdf, 0x9b,
-	0xd6, 0x85, 0x6b, 0x68, 0x9e, 0xe6, 0x4c, 0x01, 0xcf, 0x05, 0xce, 0xd8, 0xb8, 0xc0, 0xcf, 0xf7,
-	0x01, 0xf5, 0x4e, 0xc6, 0x05, 0xc6, 0x35, 0xfb, 0xc0, 0x83, 0xad, 0x0f, 0x47, 0x94, 0x26, 0x90,
-	0xe7, 0xca, 0x18, 0x05, 0x45, 0xe3, 0xb0, 0x4d, 0x7a, 0xb5, 0xab, 0x0e, 0xf3, 0x74, 0x35, 0x9a,
-	0x1f, 0x95, 0xdd, 0xec, 0xc9, 0xf8, 0x5f, 0xd5, 0xe8, 0x76, 0xb5, 0x8d, 0xc8, 0x7a, 0x1b, 0x91,
-	0x9f, 0x6d, 0x44, 0xde, 0xca, 0x28, 0x58, 0x97, 0x51, 0xf0, 0x55, 0x46, 0xc1, 0x63, 0x3f, 0x55,
-	0x38, 0x7b, 0x9e, 0xb2, 0x04, 0x72, 0x8e, 0x32, 0xcb, 0x40, 0x0f, 0x14, 0x70, 0xb7, 0x91, 0xd7,
-	0xbf, 0x9d, 0xe0, 0x72, 0x21, 0xcd, 0xf4, 0xc8, 0x7e, 0xc8, 0xf5, 0x6f, 0x00, 0x00, 0x00, 0xff,
-	0xff, 0x72, 0xda, 0xad, 0x6b, 0xb2, 0x01, 0x00, 0x00,
+	// 397 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x4c, 0x52, 0xc1, 0x6e, 0xd4, 0x30,
+	0x10, 0x5d, 0x17, 0xa8, 0x8a, 0xb7, 0x54, 0x22, 0x02, 0x14, 0x72, 0x48, 0x56, 0x55, 0x0f, 0x2b,
+	0xaa, 0xda, 0x2a, 0xfc, 0x41, 0x10, 0x87, 0x4a, 0x08, 0xa4, 0xa8, 0x5c, 0xb8, 0x44, 0x4e, 0x6a,
+	0x52, 0xb3, 0x76, 0x26, 0x8a, 0x67, 0x11, 0xfd, 0x8b, 0x7e, 0x05, 0xe2, 0xc8, 0x81, 0x8f, 0xe8,
+	0xb1, 0xe2, 0x84, 0x38, 0x14, 0xb4, 0x7b, 0xe0, 0x37, 0x50, 0x6c, 0x67, 0xe9, 0x25, 0xf2, 0x9b,
+	0x79, 0x6f, 0xf2, 0xe6, 0x69, 0xe8, 0x81, 0x16, 0x17, 0xb2, 0xe7, 0xbd, 0xec, 0xa0, 0x47, 0xd9,
+	0x73, 0xe8, 0x45, 0xad, 0x65, 0x39, 0x62, 0xd6, 0xf5, 0x80, 0x10, 0xed, 0x39, 0x16, 0x1b, 0xab,
+	0xc9, 0x43, 0x61, 0x54, 0x0b, 0xdc, 0x7d, 0x3d, 0x25, 0x39, 0xa8, 0xc1, 0x1a, 0xb0, 0xdc, 0xa2,
+	0x58, 0xa8, 0xb6, 0xe1, 0x9f, 0x8e, 0x2b, 0x89, 0xe2, 0x78, 0xc4, 0x81, 0xf5, 0xd4, 0xb3, 0x4a,
+	0x87, 0xb8, 0x07, 0xa1, 0xf5, 0xa8, 0x81, 0x06, 0x7c, 0x7d, 0x78, 0x85, 0x6a, 0xd6, 0x00, 0x34,
+	0x5a, 0x72, 0x87, 0xaa, 0xe5, 0x07, 0x8e, 0xca, 0x48, 0x8b, 0xc2, 0x74, 0x9e, 0xb0, 0xff, 0x65,
+	0x8b, 0xee, 0xbd, 0x75, 0xa6, 0x8b, 0xe0, 0x2e, 0x4a, 0xe8, 0xce, 0xe8, 0x34, 0x26, 0x33, 0x32,
+	0xbf, 0x5f, 0x6c, 0x70, 0xf4, 0x86, 0xee, 0x22, 0xa0, 0xd0, 0x25, 0xc2, 0x42, 0xb6, 0x36, 0xde,
+	0x1a, 0xfa, 0xf9, 0xe1, 0xd5, 0x4d, 0x36, 0xf9, 0x75, 0x93, 0x3d, 0xf6, 0x8e, 0xec, 0xd9, 0x82,
+	0x29, 0xe0, 0x46, 0xe0, 0x39, 0x3b, 0x69, 0xf1, 0xc7, 0xf7, 0x23, 0x1a, 0xac, 0x9e, 0xb4, 0x58,
+	0x4c, 0xdd, 0x80, 0x53, 0xa7, 0x8f, 0x72, 0x4a, 0x6b, 0x30, 0x46, 0x59, 0xab, 0xa0, 0x8d, 0xef,
+	0xcc, 0xc8, 0x7c, 0xfa, 0x7c, 0x9f, 0x05, 0xf6, 0xb8, 0x7b, 0xc8, 0x82, 0xbd, 0xdc, 0x30, 0x8b,
+	0x5b, 0xaa, 0xe8, 0x09, 0xdd, 0xfe, 0x28, 0x94, 0x96, 0x67, 0xf1, 0xdd, 0x19, 0x99, 0xef, 0x14,
+	0x01, 0x45, 0xaf, 0xe9, 0xae, 0x7f, 0x95, 0xcb, 0x16, 0x95, 0x8e, 0xef, 0xb9, 0xe9, 0x09, 0xf3,
+	0x91, 0xb0, 0x31, 0x12, 0x76, 0x3a, 0x46, 0x92, 0x3f, 0x18, 0xf6, 0xb8, 0xfc, 0x9d, 0x91, 0xaf,
+	0x7f, 0xbf, 0x3d, 0x23, 0xc5, 0xd4, 0xcb, 0xdf, 0x0d, 0xea, 0xfc, 0xd5, 0xd5, 0x2a, 0x25, 0xd7,
+	0xab, 0x94, 0xfc, 0x59, 0xa5, 0xe4, 0x72, 0x9d, 0x4e, 0xae, 0xd7, 0xe9, 0xe4, 0xe7, 0x3a, 0x9d,
+	0xbc, 0x3f, 0x6c, 0x14, 0x9e, 0x2f, 0x2b, 0x56, 0x83, 0xe1, 0x28, 0xb5, 0x86, 0xfe, 0x48, 0x01,
+	0xf7, 0x87, 0xf1, 0xf9, 0xff, 0x69, 0xe0, 0x45, 0x27, 0x6d, 0xb5, 0xed, 0x7e, 0xfb, 0xe2, 0x5f,
+	0x00, 0x00, 0x00, 0xff, 0xff, 0x3e, 0x50, 0x72, 0x0b, 0x39, 0x02, 0x00, 0x00,
 }
 
 func (m *OracleReporter) Marshal() (dAtA []byte, err error) {
@@ -136,6 +163,24 @@ func (m *OracleReporter) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	n1, err1 := github_com_cosmos_gogoproto_types.StdTimeMarshalTo(m.JailedUntil, dAtA[i-github_com_cosmos_gogoproto_types.SizeOfStdTime(m.JailedUntil):])
+	if err1 != nil {
+		return 0, err1
+	}
+	i -= n1
+	i = encodeVarintOracleReporter(dAtA, i, uint64(n1))
+	i--
+	dAtA[i] = 0x2a
+	if m.Jailed {
+		i--
+		if m.Jailed {
+			dAtA[i] = 1
+		} else {
+			dAtA[i] = 0
+		}
+		i--
+		dAtA[i] = 0x20
+	}
 	if m.Commission != nil {
 		{
 			size, err := m.Commission.MarshalToSizedBuffer(dAtA[:i])
@@ -195,6 +240,11 @@ func (m *OracleReporter) Size() (n int) {
 		l = m.Commission.Size()
 		n += 1 + l + sovOracleReporter(uint64(l))
 	}
+	if m.Jailed {
+		n += 2
+	}
+	l = github_com_cosmos_gogoproto_types.SizeOfStdTime(m.JailedUntil)
+	n += 1 + l + sovOracleReporter(uint64(l))
 	return n
 }
 
@@ -332,6 +382,59 @@ func (m *OracleReporter) Unmarshal(dAtA []byte) error {
 				m.Commission = &types.Commission{}
 			}
 			if err := m.Commission.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
+		case 4:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Jailed", wireType)
+			}
+			var v int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowOracleReporter
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				v |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			m.Jailed = bool(v != 0)
+		case 5:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field JailedUntil", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowOracleReporter
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthOracleReporter
+			}
+			postIndex := iNdEx + msglen
+			if postIndex < 0 {
+				return ErrInvalidLengthOracleReporter
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			if err := github_com_cosmos_gogoproto_types.StdTimeUnmarshal(&m.JailedUntil, dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
 			iNdEx = postIndex
